Added in new vivato files

--- a/bootstrap_theme/custom.scss
+++ b/bootstrap_theme/custom.scss
@@ -44,52 +44,52 @@ $font-family-sans-serif: 'Montserrat', sans-serif;
 
 @import "bootstrap/bootstrap";
 
-// import Pendigital sass
-@import "pendigital/factory_topBar";
-@import "pendigital/factory_mainNavs";
-@import "pendigital/factory_hamburgers";
-@import "pendigital/factory_heroes";
-@import "pendigital/factory_heroesHalf";
-@import "pendigital/factory_testimonials";
-@import "pendigital/factory_cards";
-@import "pendigital/factory_sections";
-@import "pendigital/factory_footers";
-@import "pendigital/factory_testimonial_sliders";
-@import "pendigital/factory_logo_strips";
-@import "pendigital/factory_heroVideos";
-@import "pendigital/factory_mission_statements";
-@import "pendigital/factory_ribbons";
-@import "pendigital/factory_people";
-@import "pendigital/factory_specials_multiBox";
-@import "pendigital/factory_specials_carouselSteps";
-@import "pendigital/factory_specials_stats";
-@import "pendigital/factory_lists";
-@import "pendigital/factory_call_to_actions";
-@import "pendigital/factory_cards_posts";
-@import "pendigital/factory_headlines";
-@import "pendigital/factory_social_media_share";
-@import "pendigital/factory_blog_post";
-@import "pendigital/factory_forms";
-@import "pendigital/factory_text";
-@import "pendigital/factory_grid";
-@import "pendigital/factory_widgets";
-@import "pendigital/factory_page_menus";
-@import "pendigital/factory_carousels";
-@import "pendigital/factory_pricing";
-@import "pendigital/factory_faqs";
-@import "pendigital/factory_breadcrumbs";
-@import "pendigital/factory_admin_page_menus";
-@import "pendigital/factory_admin_page_menus_2";
-@import "pendigital/factory_admin_page_menus_3";
-@import "pendigital/factory_admin_logins";
-@import "pendigital/factory_admin_tables";
-@import "pendigital/factory_admin_cards";
-@import "pendigital/factory_admin_forms";
-@import "pendigital/factory_admin_dashboard.scss";
-@import "pendigital/factory_tabs.scss";
-@import "pendigital/factory_modals.scss";
-@import "pendigital/factory_search.scss";
-@import "pendigital/factory_galleries.scss";
-@import "pendigital/factory_sliders.scss";
+// import vivato sass
+@import "vivato/factory_topBar";
+@import "vivato/factory_mainNavs";
+@import "vivato/factory_hamburgers";
+@import "vivato/factory_heroes";
+@import "vivato/factory_heroesHalf";
+@import "vivato/factory_testimonials";
+@import "vivato/factory_cards";
+@import "vivato/factory_sections";
+@import "vivato/factory_footers";
+@import "vivato/factory_testimonial_sliders";
+@import "vivato/factory_logo_strips";
+@import "vivato/factory_heroVideos";
+@import "vivato/factory_mission_statements";
+@import "vivato/factory_ribbons";
+@import "vivato/factory_people";
+@import "vivato/factory_specials_multiBox";
+@import "vivato/factory_specials_carouselSteps";
+@import "vivato/factory_specials_stats";
+@import "vivato/factory_lists";
+@import "vivato/factory_call_to_actions";
+@import "vivato/factory_cards_posts";
+@import "vivato/factory_headlines";
+@import "vivato/factory_social_media_share";
+@import "vivato/factory_blog_post";
+@import "vivato/factory_forms";
+@import "vivato/factory_text";
+@import "vivato/factory_grid";
+@import "vivato/factory_widgets";
+@import "vivato/factory_page_menus";
+@import "vivato/factory_carousels";
+@import "vivato/factory_pricing";
+@import "vivato/factory_faqs";
+@import "vivato/factory_breadcrumbs";
+@import "vivato/factory_admin_page_menus";
+@import "vivato/factory_admin_page_menus_2";
+@import "vivato/factory_admin_page_menus_3";
+@import "vivato/factory_admin_logins";
+@import "vivato/factory_admin_tables";
+@import "vivato/factory_admin_cards";
+@import "vivato/factory_admin_forms";
+@import "vivato/factory_admin_dashboard.scss";
+@import "vivato/factory_tabs.scss";
+@import "vivato/factory_modals.scss";
+@import "vivato/factory_search.scss";
+@import "vivato/factory_galleries.scss";
+@import "vivato/factory_sliders.scss";
 
 /* Custom CSS rules come here */
