--- a/bootstrap_theme/vivato/factory_mega_menu_nav.scss
+++ b/bootstrap_theme/vivato/factory_mega_menu_nav.scss
@@ -1,17 +1,17 @@
 // mega menu variables
 $pd-mega-mobile-breakpoint: 1049px;
 $pd-mega-desktop-breakpoint: 1050px;
-$pd-mega-color: #2a2a2a;
+$pd-mega-color: $primary;
 $pd-mega-font-weight: 400;
-$pd-mega-dropdown-color: #c5247f;
+$pd-mega-dropdown-color: $secondary;
 $pd-mega-drawer-width: 90vw;
 $pd-mega-drawer-max-width: 400px;
 $pd-mega-drawer-top: 94px;
 $pd-mega-drawer-padding: 20px;
-$pd-mega-btn-padding: 12px 30px;
-$pd-mega-btn-border: 2px solid #c5247f;
+$pd-mega-btn-padding: 8px 26px;
+$pd-mega-btn-border: 2px solid $primary;
 $pd-mega-btn-border-sec: 2px solid #c5247f;
-$pd-mega-btn-background-color: #c5247f;
+$pd-mega-btn-background-color: $primary;
 $pd-mega-btn-background-color-sec: #ffffff;
 $pd-mega-btn-border-radius: 50em;
 $pd-mega-btn-color: white;
@@ -19,11 +19,12 @@ $pd-mega-btn-color-sec: #c5247f;
 $pd-mega-btn-text-transform: Capitalize;
 $pd-mega-btn-font-weight: 700;
 $pd-mega-dropdown-top: 50px;
+$pd-mega-menu-icon-color: $secondary;
+$pd-mega-menu-border-color: $secondary;
 
 // **********************
 // *** PD NO SCROLL *****
 // **********************
-
 // body no scroll
 .pd-no-scroll {
     @media screen and (max-width: $pd-mega-mobile-breakpoint) {
@@ -35,7 +36,6 @@ $pd-mega-dropdown-top: 50px;
 // **********************
 // *** MEGA MENU LOGO ***
 // **********************
-
 .pd-mega-menu-logo {
     display: inline-block;
     margin-top: 10px;
@@ -46,9 +46,7 @@ $pd-mega-dropdown-top: 50px;
         outline-offset: 6px;
         border-radius: 50em;
     }
-
 }
-
 
 // *********************
 // *** OUTER NAV DIV ***
@@ -179,7 +177,7 @@ $pd-mega-dropdown-top: 50px;
         text-transform: capitalize;
 
         svg {
-            fill: #c5247F;
+            fill: $info;
         }
     }
 }
@@ -211,6 +209,7 @@ $pd-mega-dropdown-top: 50px;
         &:hover {
             background: white;
             color: $info;
+
             .pd-icon {
                 fill: $info;
             }
@@ -259,12 +258,12 @@ $pd-mega-dropdown-top: 50px;
         transition: background .3s;
 
         .pd-icon {
-            fill: #c5247f;
+            fill: $info;
             margin-right: 6px;
         }
 
         &:hover {
-            background: #c5247f;
+            background: $info;
             color: white;
 
             .pd-icon {
@@ -311,12 +310,13 @@ $pd-mega-dropdown-top: 50px;
     margin-top: 20px;
 
     .pd-mega-menu-sub-menu-icon-outer {
-        margin-right: 4px;
+        margin-right: 8px;
 
-        img, svg {
+        img,
+        svg {
             width: 20px;
             height: 20px;
-            fill: $info;
+            fill: $pd-mega-menu-icon-color;
         }
     }
 
@@ -325,8 +325,9 @@ $pd-mega-dropdown-top: 50px;
         flex-direction: column;
         justify-content: flex-start;
         align-items: flex-start;
-        color: #2a2a2a;
+        color: $pd-mega-color;
         transition: color .2s;
+        font-size: 0.9rem;
 
         strong {
             font-weight: 700;
@@ -336,7 +337,7 @@ $pd-mega-dropdown-top: 50px;
         p {
             font-weight: 300;
             margin-bottom: 0;
-            font-size: 0.8rem;
+            font-size: 0.7rem;
         }
     }
 
@@ -347,16 +348,18 @@ $pd-mega-dropdown-top: 50px;
 
             strong {
                 position: relative;
-                &:after {
-                    position: absolute;
-                    top: 0px;
-                    right: -6px;
-                    display: inline-block;
-                    content: url('/images/design-assets/_openflexure/arrow_left_alt_24dp_C5247F_FILL0_wght300_GRAD0_opsz24.svg');
-                    width: 20px;
-                    height: 20px;
-                    // transform: translateY(7px);
-                }
+
+                // &:after {
+                //     position: absolute;
+                //     top: 0px;
+                //     right: -6px;
+                //     display: inline-block;
+                //     content: url('/images/design-assets/_vivato/arrow_left_alt_24dp_C895FA_FILL0_wght300_GRAD0_opsz24.svg');
+                //     width: 20px;
+                //     height: 20px;
+
+                //     // transform: translateY(7px);
+                // }
             }
         }
     }
@@ -365,7 +368,6 @@ $pd-mega-dropdown-top: 50px;
 // goes on the li with a sub menu
 // .pd-mega-menu-has-sub {
 // }
-
 // ****************************
 // *** MEGA MENU SUB TOGGLE ***
 // ****************************
@@ -421,23 +423,22 @@ $pd-mega-dropdown-top: 50px;
 .pd-mega-menu-sub-menu {
     display: none;
     z-index: 1000;
-    box-shadow: 6px 7px 14px rgba(0, 0, 0, 0.1);
-    border-top: 1px solid #c5247F;
     background-color: white;
-    @media (min-width: $pd-mega-desktop-breakpoint) {
-        border-radius: 0px 0px 10px 10px;
-    }
-
+    
+    
     @media screen and (max-width: $pd-mega-mobile-breakpoint) {
         position: relative;
         width: 100%;
         max-width: 100%;
     }
-
+    
     @media (min-width: $pd-mega-desktop-breakpoint) {
         position: absolute;
         top: 100%;
-
+        border-radius: 0px 0px 10px 10px;
+        border-top: 1px solid $pd-mega-menu-border-color;
+        box-shadow: 6px 7px 14px rgba(0, 0, 0, 0.1);
+        
         // $pd-mega-drawer-top
         left: 50%;
         transform: translateX(-50%);
@@ -480,6 +481,7 @@ $pd-mega-dropdown-top: 50px;
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
+    
 
     @media screen and (max-width: $pd-mega-mobile-breakpoint) {
         width: 100%;
@@ -490,7 +492,7 @@ $pd-mega-dropdown-top: 50px;
         // width: 20%;
         min-width: 0;
         flex: 0 0 25%;
-        padding: 10px;
+        padding: 10px 10px 20px 10px;
         box-sizing: border-box;
     }
 
@@ -502,7 +504,7 @@ $pd-mega-dropdown-top: 50px;
         strong {
             // text-transform: uppercase;
             font-weight: 700;
-            color: #c5247F;
+            color: $primary;
             font-size: 0.75rem;
         }
     }
@@ -524,22 +526,23 @@ $pd-mega-dropdown-top: 50px;
     padding-left: 0;
     margin: 0;
     z-index: 1000;
-    border-top: 1px solid #c5247f;
     display: none;
     background-color: white;
-    padding: 10px;
-    @media (min-width: $pd-mega-desktop-breakpoint) {
-        border-radius: 0px 0px 10px 10px;
-
-    }
-
+    
+    
+    
     @media screen and (max-width: $pd-mega-mobile-breakpoint) {
         position: relative;
+        padding: 10px 10px 10px 0px;
     }
-
+    
     @media (min-width: $pd-mega-desktop-breakpoint) {
         position: absolute;
-
+        border-radius: 0px 0px 10px 10px;
+        box-shadow: 6px 7px 14px rgba(0, 0, 0, 0.1);
+        border-top: 1px solid $secondary;
+        padding: 10px;
+        
         // top: $pd-mega-dropdown-top;
         top: 100%;
         min-width: 140px;
@@ -556,9 +559,11 @@ $pd-mega-dropdown-top: 50px;
 // this is the dropdown's li
 .pd-mega-dropdown-nav-item {
     margin-bottom: 20px;
+
     a {
         font-weight: 700;
-        color: #2a2a2a;
+        font-size: 0.9rem;
+        color: $pd-mega-color;
     }
 
     &:last-child {
