--- a/bootstrap_theme/custom.scss
+++ b/bootstrap_theme/custom.scss
@@ -12,12 +12,43 @@ $pd-bone: #E0DDCF;
 $pd-isaballine: #F1F0EA;
 $pd-ochre: #D17A22;
 
-// @import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,300;0,400;0,700;1,300&display=swap');
-// @import url('https://fonts.googleapis.com/css2?family=Zilla+Slab&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap');
+@font-face {
+    font-family: 'DMSans';
+    font-style: normal;
+    font-weight: 400;
+    src:    url('/fonts/DMSans-Regular-subset.woff2') format('woff2'), 
+            url('/fonts/DMSans-Regular-subset.woff') format('woff');
+    font-display: swap;
+}
 
-// $font-family-sans-serif: 'Raleway', sans-serif;
-$font-family-sans-serif: 'Montserrat', sans-serif;
+@font-face {
+    font-family: 'DMSans';
+    font-style: normal;
+    font-weight: 200;
+    src:    url('/fonts/DMSans-ExtraLight-subset.woff2') format('woff2'),
+            url('/fonts/DMSans-ExtraLight-subset.woff') format('woff');
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'DMSans';
+    font-style: normal;
+    font-weight: 300;
+    src:    url('/fonts/DMSans-Light-subset.woff2') format('woff2'), 
+            url('/fonts/DMSans-Light-subset.woff') format('woff');
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'DMSans';
+    font-style: normal;
+    font-weight: 500;
+    src:    url('/fonts/DMSans-Medium-subset.woff2') format('woff2'),
+            url('/fonts/DMSans-Medium-subset.woff2') format('woff');
+    font-display: swap;
+}
+
+$font-family-sans-serif: 'DMSans', system-ui, -apple-system, sans-serif;
 
 @import "bootstrap/bootstrap";
 
