--- a/bootstrap_theme/vivato/factory_footers.scss
+++ b/bootstrap_theme/vivato/factory_footers.scss
@@ -239,15 +239,15 @@
 
     background: linear-gradient(rgba($primary, 1) 0%, rgba($primary, 0.9) 30%, rgba($primary, 0.9) 60%, rgba($primary,1) 100%);
 
-    h3 {
-        font-weight: 700;
-        font-size: 1.2rem;
-    }
+    // h3 {
+        // font-weight: 700;
+        // font-size: 1.2rem;
+    // }
 
-    h4 {
-        font-weight: 700;
-        font-size: 1rem;
-    }
+    // h4 {
+        // font-weight: 700;
+        // font-size: 1rem;
+    // }
 
     p {
         margin-bottom: 3px;
