Added in gradient class

--- a/bootstrap_theme/custom.scss
+++ b/bootstrap_theme/custom.scss
@@ -89,6 +89,7 @@ $font-family-sans-serif: 'DMSans', system-ui, -apple-system, sans-serif;
 @import "vivato/factory_pricing";
 @import "vivato/factory_faqs";
 @import "vivato/factory_breadcrumbs";
+@import "vivato/utils";
 
 // @import "vivato/factory_admin_page_menus";
 // @import "vivato/factory_admin_page_menus_2";
