--- a/bootstrap_theme/vivato/utils.scss
+++ b/bootstrap_theme/vivato/utils.scss
@@ -5,4 +5,131 @@
         $info 70%, 
         $primary 100%
     );
+
+    @media screen and (max-width: 575px) {
+
+    }
+
+    @media (min-width: 576px) and (max-width: 767px) {
+
+    }
+
+    @media (min-width: 768px) and (max-width: 991px) {
+
+    }
+
+    @media (min-width: 992px) and (max-width: 1199px) {
+
+    }
+
+    @media (min-width: 1200px) {
+
+    }
+
+}
+
+// gradient for small cards
+.pd-gradient-300w-500h {
+        background: radial-gradient(
+            circle 300px at 120% 100%, 
+            $secondary 2%, 
+            $info 75%, 
+            $primary 120%
+        );
+}
+
+// gradient for medium cards
+.pd-gradient-500w-500h {
+    background: radial-gradient(
+        circle 500px at 100% 100%, 
+        $secondary 5%, 
+        $info 55%, 
+        $primary 100%
+    );
+}
+
+// gradient for large cards
+.pd-gradient-1000w-500h {
+    @media screen and (max-width: 575px) {
+        background: radial-gradient(
+            circle 500px at 100% 100%, 
+            $secondary 5%, 
+            $info 55%, 
+            $primary 100%
+        );
+    }
+
+    @media (min-width: 576px) {
+        background: radial-gradient(
+            circle 1000px at 100% 100%, 
+            $secondary 5%, 
+            $info 55%, 
+            $primary 100%
+        );
+
+    }
+}
+
+
+// full screen gradients
+.pd-gradient-full-width-800h {
+    
+    @media screen and (max-width: 575px) {
+        background: radial-gradient(
+            circle 500px at 100% 100%, 
+            $secondary 5%, 
+            $info 55%, 
+            $primary 100%
+            );
+        }
+        
+    @media (min-width: 576px) {
+            
+        background: radial-gradient(
+            circle 1000px at 100% 100%, 
+            $secondary 5%, 
+            $info 55%, 
+            $primary 100%
+        );
+    }
+}
+
+// ***********************************
+// *** test width gradient classes ***
+// ***********************************
+
+.pd-300w-500h {
+    height: 500px;
+    @media screen and (max-width: 767px) {
+        width: 100%;
+    }
+
+    @media (min-width: 768px) {
+        width: 100%;
+        max-width: 300px;
+    }
+}
+
+.pd-500w-500h {
+    height: 500px;
+    @media screen and (max-width: 767px) {
+        width: 100%;
+    }
+
+    @media (min-width: 768px) {
+        width: 100%;
+        max-width: 500px;
+    }
+}
+
+.pd-1000w-500h {
+    height: 500px;
+    @media screen and (max-width: 991px) {
+        width: 100%;
+    }
+
+    @media (min-width: 992px) {
+        width: 100%;
+        max-width: 1000px;
+    }
 }
