--- a/bootstrap_theme/custom.scss
+++ b/bootstrap_theme/custom.scss
@@ -29,6 +29,10 @@ $pd-btn-border: 2px solid $primary;
 $pd-btn-border-hover: 2px solid $info;
 $pd-line-height-lg: 1.4;
 
+// border-radius
+$pd-border-radius-lg: 40px;
+$pd-border-radius-sm: 20px;
+
 // $info: #b53027;
 $pd-oxford-blue: #00182E;
 $pd-bone: #E0DDCF;
