Added in some refinements for hero

--- a/bootstrap_theme/vivato/factory_testimonial_sliders.scss
+++ b/bootstrap_theme/vivato/factory_testimonial_sliders.scss
@@ -1127,7 +1127,7 @@
             font-weight: $pd-font-weight-light;
             font-size: $pd-font-lg;
             color: $primary;
-            line-height: $pd-line-height-lg;
+            line-height: $pd-line-height-ex-lg;
         }
 
         p.pd-testimonial-slider-8-author {
